# chkmd

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
src/chkmd/: checker.py  cli.py
